--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,25 @@
 .app {
-  display: inline-block;
+  margin: 100px;
+}
+
+h1 {
+  font-size: 16px;
+}
+
+h3 {
+  font-size: 13px;
+  font-weight: 400;
 }
 
 h4 {
   color: #8f9293;
   font-size: 11px;
+}
+
+p {
+  max-width: 405px;
+  font-size: 15px;
+  line-height: 24px;
 }
 
 span {
