--- a/src/App.scss
+++ b/src/App.scss
@@ -35,4 +35,8 @@ button {
   border: 1px #f16885 solid;
   background-color: transparent;
   border-radius: 50px;
+  a {
+    color: #f16885;
+    text-decoration: none;
+  }
 }
