--- a/src/Components/Preview/preview.scss
+++ b/src/Components/Preview/preview.scss
@@ -1,59 +1,70 @@
-.left-layout, .right-layout {
-    .email-container {
-        display: flex;
-        margin: 80px 0;
+.left-layout,
+.right-layout {
+  width: 60%;
+  .email-container {
+    display: flex;
+    margin: 80px 0;
+  }
+
+  .email-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 219px;
+    &:first-child {
+      margin: 0 40px 40px;
     }
-      
-      .email-block {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        height: 219px;
-        margin: 35px; 
 
-        h3 {
-            margin-top: 13px;
-          }
+    h3 {
+      margin-top: 13px;
+    }
 
-          &:first-child > div {
-            display: flex;
-            justify-content: space-evenly;
-          }
-      }
+    &:first-child > div {
+      display: flex;
+      justify-content: space-evenly;
+    }
+  }
 }
 
 .right-layout {
-    float: left;
-    .email-container {
-        flex-direction: row-reverse;
-    }
+  .email-container {
+    flex-direction: row-reverse;
+  }
 }
 
 .center-layout {
-    float: left;
-    .email-container {
-        .email-block {
-                    h1, h3 {
-                        margin-top: 13px;
-                      }    
+  width: 60%;
+  .email-container {
+    margin: 80px 0;
+    .email-block {
+      h1,
+      h3 {
+        margin-top: 13px;
+      }
 
-            &:first-child {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
-            &:last-child {
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                margin-top: 25px;
-            }
-            .icons-block {
-                display: flex;
-                justify-content: space-between;
-                min-width: 115px;
-                margin-left: 56px;
-            }
-        }
+      &:first-child {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      &:last-child {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-top: 25px;
+      }
+      .icons-block {
+        display: flex;
+        justify-content: space-between;
+        min-width: 115px;
+        margin-left: 56px;
+      }
     }
+  }
+}
+.btn-wrapper {
+  display: flex;
+  button {
+    margin-left: auto;
+  }
 }
