--- a/src/Components/Template/template.scss
+++ b/src/Components/Template/template.scss
@@ -4,15 +4,43 @@
 
 .temp-block {
   display: flex;
-
-  div {
+  input {
+    display: none;
+  }
+  .temp-items {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+    div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+      width: 220px;
+      height: 200px;
+      border-radius: 10px;
+    }
+  }
+
+  .center {
+    margin: 0 20px;
+  }
+
+  .label {
+    display: inline-block;
+    border: 1px #dddddd solid;
     width: 220px;
     height: 200px;
-    border: 1px #dddddd solid;
     border-radius: 10px;
   }
+
+  .radio:checked + .label {
+    /* target next sibling (+) label */
+    border: 1px #f491a7 solid;
+    span {
+      color: #f491a7;
+    }
+  }
+}
+
+.isHidden {
+  display: none; /* hide radio buttons */
 }
