--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,7 @@ h3 {
 h4 {
   color: #8f9293;
   font-size: 11px;
+  margin-bottom: 8px;
 }
 
 p {
@@ -27,6 +28,11 @@ span {
   font-size: 13px;
 }
 
+ul, li, a {
+  text-decoration: none;
+  list-style: none;
+}
+
 button {
   width: 184px;
   height: 35px;
@@ -37,6 +43,5 @@ button {
   border-radius: 50px;
   a {
     color: #f16885;
-    text-decoration: none;
   }
 }
