--- a/src/Components/Preview/preview.scss
+++ b/src/Components/Preview/preview.scss
@@ -4,7 +4,6 @@
   .email-container {
     display: flex;
     margin: 80px 0;
-  }
 
   .email-block {
     display: flex;
@@ -25,16 +24,19 @@
     }
   }
 }
+}
 
 .right-layout {
   .email-container {
     flex-direction: row-reverse;
+    justify-content: flex-end;
   }
 }
 
 .center-layout {
   width: 60%;
   .email-container {
+    padding: 0 150px;
     margin: 80px 0;
     .email-block {
       h1,
@@ -62,8 +64,161 @@
     }
   }
 }
+
+.left-layout {
+  .page-container {
+    padding: 0 150px;
+    margin: 60px 0;
+    .page-block-header {
+      display: flex;
+      flex-direction: column;
+      h1 {
+        margin-top: 10px;
+        margin-bottom: 20px;
+      }
+      div {
+        display: flex;
+        span {
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          margin-right: 50px;
+          img {
+            margin-right: 5px;
+
+          }
+        }
+      }
+    }
+    .page-block-content {
+      margin-top: 20px;
+      margin-bottom: 10px;
+    }
+    .page-block-footer {
+      display: flex;
+      align-items: center;
+      span {
+        margin-right: 22px;
+      }
+      div {
+        display: flex;
+        justify-content: space-between;
+        min-width: 100px;
+      }
+    }
+  }
+}
+
+.center-layout {
+  .page-container {
+    padding: 0 85px;
+    margin: 60px 0;
+    width: 55%;
+    .page-block-header {
+      margin-bottom: 20px;
+    }
+    .page-block-container {
+      display: flex;
+      width: 100%;
+      .page-block-footer {
+        width: 30%;
+        height: 24px;
+        display: flex;
+        align-items: center;
+        span {
+          margin-right: 22px;
+        }
+        div {
+          display: flex;
+          justify-content: space-between;
+          min-width: 100px;
+        }
+      }
+      .page-block-content {
+        width: 70%;
+        margin-left: 20px;
+        h1 {
+          margin-top: 5px;
+        }
+        div {
+          display: flex;
+          margin: 15px 0;
+          span {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            margin-right: 50px;
+            img {
+              margin-right: 5px;
+  
+            }
+          }
+        }
+        > img {
+          margin-top: 20px;
+          margin-bottom: 5px;
+        }
+      }
+    }
+  }
+}
+
+.right-layout {
+  .page-container {
+    display: flex;
+    width: 100%;
+    margin: 80px 0;
+    width: 75%;
+    .page-block-header {
+      display: flex;
+      width: 55%;
+      .img-collection{
+        width: 10%;
+        margin-right: 10px;
+        img {
+          margin-bottom: 10px;
+        }
+      }
+      .img-big{
+        width: 90%;
+      }
+    }
+    .page-block-content {
+      width: 45%;
+      .buttons-wrapper {
+        display: flex;
+        justify-content: space-between;
+        margin: 20px 0;
+        button {
+          width: 155px;
+          background-color:  #ec244f;
+          color: #ffffff
+        }
+      }
+      ul {
+        li {
+          position: relative;
+          line-height: 25px;
+          padding: 0 0 0 20px;
+          &::before {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 10px;
+            width: 6px;
+            height: 6px;
+            background-color:  #ec244f;
+            border-radius: 50%;
+          }
+        }
+      }
+    }
+  }
+}
+
 .btn-wrapper {
   display: flex;
+  padding: 0 150px;
   button {
     margin-left: auto;
   }
