--- a/src/Components/Select/select.scss
+++ b/src/Components/Select/select.scss
@@ -3,8 +3,8 @@ select {
     height: 40px;
     border-color: #dddddd;
     background-color: #ffffff;
+    outline: none;
     option {
         border-color: red;
-
     }
 }
