--- a/src/Components/Template/template.scss
+++ b/src/Components/Template/template.scss
@@ -30,6 +30,9 @@
     width: 220px;
     height: 200px;
     border-radius: 10px;
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   .radio:checked + .label {
