--- a/src/Components/Preview/preview.scss
+++ b/src/Components/Preview/preview.scss
@@ -1,29 +1,31 @@
 .left-layout,
 .right-layout {
   width: 60%;
+
   .email-container {
     display: flex;
     margin: 80px 0;
 
-  .email-block {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 219px;
-    &:first-child {
-      margin: 0 40px 40px;
-    }
-
-    h3 {
-      margin-top: 13px;
-    }
-
-    &:first-child > div {
+    .email-block {
       display: flex;
-      justify-content: space-evenly;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 219px;
+
+      &:first-child {
+        margin: 0 40px 40px;
+      }
+
+      h3 {
+        margin-top: 13px;
+      }
+
+      &:first-child > div {
+        display: flex;
+        justify-content: space-evenly;
+      }
     }
   }
-}
 }
 
 .right-layout {
@@ -35,9 +37,11 @@
 
 .center-layout {
   width: 60%;
+
   .email-container {
     padding: 0 150px;
     margin: 80px 0;
+
     .email-block {
       h1,
       h3 {
@@ -49,12 +53,14 @@
         flex-direction: column;
         align-items: center;
       }
+
       &:last-child {
         display: flex;
         flex-direction: row;
         align-items: center;
         margin-top: 25px;
       }
+
       .icons-block {
         display: flex;
         justify-content: space-between;
@@ -69,20 +75,25 @@
   .page-container {
     padding: 0 150px;
     margin: 60px 0;
+
     .page-block-header {
       display: flex;
       flex-direction: column;
+
       h1 {
         margin-top: 10px;
         margin-bottom: 20px;
       }
+
       div {
         display: flex;
+
         span {
           display: flex;
           justify-content: flex-start;
           align-items: center;
           margin-right: 50px;
+
           img {
             margin-right: 5px;
 
@@ -90,16 +101,20 @@
         }
       }
     }
+
     .page-block-content {
       margin-top: 20px;
       margin-bottom: 10px;
     }
+
     .page-block-footer {
       display: flex;
       align-items: center;
+
       span {
         margin-right: 22px;
       }
+
       div {
         display: flex;
         justify-content: space-between;
@@ -114,46 +129,57 @@
     padding: 0 85px;
     margin: 60px 0;
     width: 55%;
+
     .page-block-header {
       margin-bottom: 20px;
     }
+
     .page-block-container {
       display: flex;
       width: 100%;
+
       .page-block-footer {
         width: 30%;
         height: 24px;
         display: flex;
         align-items: center;
+
         span {
           margin-right: 22px;
         }
+
         div {
           display: flex;
           justify-content: space-between;
           min-width: 100px;
         }
       }
+
       .page-block-content {
         width: 70%;
         margin-left: 20px;
+
         h1 {
           margin-top: 5px;
         }
+
         div {
           display: flex;
           margin: 15px 0;
+
           span {
             display: flex;
             justify-content: flex-start;
             align-items: center;
             margin-right: 50px;
+
             img {
               margin-right: 5px;
-  
+
             }
           }
         }
+
         > img {
           margin-top: 20px;
           margin-bottom: 5px;
@@ -169,37 +195,46 @@
     width: 100%;
     margin: 80px 0;
     width: 75%;
+
     .page-block-header {
       display: flex;
       width: 55%;
-      .img-collection{
+
+      .img-collection {
         width: 10%;
         margin-right: 10px;
+
         img {
           margin-bottom: 10px;
         }
       }
-      .img-big{
+
+      .img-big {
         width: 90%;
       }
     }
+
     .page-block-content {
       width: 45%;
+
       .buttons-wrapper {
         display: flex;
         justify-content: space-between;
         margin: 20px 0;
+
         button {
           width: 155px;
-          background-color:  #ec244f;
+          background-color: #ec244f;
           color: #ffffff
         }
       }
+
       ul {
         li {
           position: relative;
           line-height: 25px;
           padding: 0 0 0 20px;
+
           &::before {
             content: "";
             position: absolute;
@@ -207,7 +242,7 @@
             top: 10px;
             width: 6px;
             height: 6px;
-            background-color:  #ec244f;
+            background-color: #ec244f;
             border-radius: 50%;
           }
         }
@@ -219,7 +254,11 @@
 .btn-wrapper {
   display: flex;
   padding: 0 150px;
-  button {
+
+  a {
     margin-left: auto;
+    button:hover {
+      cursor: pointer;
+    }
   }
 }
