--- a/src/Components/Select/select.scss
+++ b/src/Components/Select/select.scss
@@ -1,10 +1,15 @@
 select {
-    width: 700px;
-    height: 40px;
-    border-color: #dddddd;
-    background-color: #ffffff;
-    outline: none;
-    option {
-        border-color: red;
-    }
+  width: 700px;
+  height: 40px;
+  border-color: #dddddd;
+  background-color: #ffffff;
+  outline: none;
+
+  option {
+    border-color: red;
+  }
+
+  &:hover {
+    cursor: pointer;
+  }
 }
